<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RestAPP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_log_in">LOG IN</string>
    <string name="login_user_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="server_not_found">RestAPP Server not found</string>
    <string name="waiter_name_sample">Fer Raviola</string>
    <string name="waiter_username_sample">#feresr</string>
    <string name="new_order">NEW ORDER</string>
    <string name="add_hint">Agregar ítem</string>
    <string name="title_activity_search">Buscar item</string>
    <string name="missing_token">El servidor fué encontrado, pero no pudo autentificar las credenciales. Intente nuevamente</string>
    <string name="search_title">Buscar item</string>
    <string name="search_hint">Pizza, Cerveza, Jugo...</string>
    <string name="http_error">Hubo problema en el servidor, por favor, intente nuevamente.</string>
    <string name="title_activity_order">Order</string>
    <string name="log_out">Log out</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_tables">Mesas disponibles</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="search_items">Search menu items</string>

</resources>
