<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFBB33"
    android:layout_height="match_parent"
    tools:context="com.tesis.restapp.restapp.activities.intro.IntroActivity$PlaceholderFragment">

    <ImageView
        android:id="@+id/lock_icon"
        android:layout_width="140dp"
        android:layout_centerHorizontal="true"
        android:layout_height="140dp"
        android:src="@drawable/lock_icon"
        android:layout_above="@+id/usernameTxt" />

    <EditText
        android:id="@+id/usernameTxt"
        android:layout_width="290sp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custominput"
        android:hint="@string/login_user_hint"
        android:inputType="textPersonName"
        android:paddingLeft="8sp"
        android:textColor="#ddd"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="4sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custominput"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:layout_below="@+id/usernameTxt"
        android:paddingLeft="8sp"
        android:textColor="#ddd"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="bottom"
        android:background="@drawable/transparent_button"
        android:text="@string/button_log_in"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>